test/org/midica/testfiles/failing/eff-cd-src-not-sup-4.midica
INCLUDE inc/instruments.midica

0: ctrl_dest
0:   .src(ctrl=60)
0:   .dest(vol,10%)
0:   .on()

